--- a/templates/mainuser/notificationpage.html
+++ b/templates/mainuser/notificationpage.html
@@ -1,17 +1,96 @@
 {% load static %}
 <html lang="en">
 
-<!-- activities22:59-->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'mainuser/img/favicon.ico' %}">
-    <title>Medlab Blood Bank</title>
+    <title>Medlab Blood Bank - Notifications</title>
     <link rel="stylesheet" type="text/css" href="{% static 'mainuser/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'mainuser/css/font-awesome.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'mainuser/css/style.css' %}">
     <script src="https://kit.fontawesome.com/044329719f.js" crossorigin="anonymous"></script>
-   
+    <style>
+		body {
+            background-image: url("{% static 'img/9.jpg' %}"); /* Replace 'background.jpg' with your image file name */
+            background-repeat: no-repeat;
+            background-size: cover; /* You can adjust this property to control how the image is displayed */
+        }
+
+			
+		.sidebar {
+			box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+			top: 50px;
+			width: 230px;
+			z-index: 1039;
+			background-color:#d1bebc;
+			bottom: 0;
+			margin-top: 10px;
+			position: fixed;
+			left: 0;
+			transition: all 0.2s ease-in-out;
+		}
+		.sidebar.opened {
+			-webkit-transition: all 0.4s ease;
+			-moz-transition: all 0.4s ease;
+			transition: all 0.4s ease;
+		}
+		.sidebar-inner {
+			height: 100%;
+			transition: all 0.2s ease-in-out 0s;
+		}
+		.sidebar-menu ul {
+			font-size: 14px;
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+		}
+		.sidebar-menu li a {
+			color: white;
+			display: block;
+			font-size: 13px;
+			height: auto;
+			padding: 0 20px;
+		}
+		.sidebar-menu li a:hover {
+			color: #802020;
+		}
+		.sidebar-menu li.active a {
+			color: #802020;
+			background-color: #f3f3f3;
+		}
+		.menu-title {
+			color: #333;
+			font-size: 15px;
+			font-weight: 500;
+			padding: 12px 20px;
+		}
+		.menu-title > i {
+			float: right;
+			line-height: 40px;
+		}
+		.sidebar-menu li.menu-title a {
+			color: #009efb;
+			display: inline-block;
+			float: right;
+			padding: 0;
+		}
+		.sidebar-menu li.menu-title a.btn {
+			color: #fff;
+			display: block;
+			float: none;
+			font-size: 15px;
+			line-height: inherit;
+			margin-bottom: 15px;
+		}
+		.sidebar-menu ul ul a.active {
+			color: #009efb;
+			text-decoration: underline;
+		}
+        .notification-message.unread {
+            font-weight: bold;
+        }
+	</style>   
 </head>
 
 <body>
@@ -26,29 +105,63 @@
             <a id="mobile_btn" class="mobile_btn float-left" href="#sidebar"><i class="fa fa-bars"></i></a>
             <ul class="nav user-menu float-right">
                 
-                
+                <li class="nav-item dropdown d-none d-sm-block">
+                    <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" id="notification-bell">
+						<i class="fa fa-bell-o" style="color:red"></i>
+						<span class="badge badge-pill bg-danger float-right" id="notification-count">{{ unread_notifications_count }}</span>
+					</a>
+                    <div class="dropdown-menu notifications" id="notification-dropdown">
+						<div class="topnav-dropdown-header">
+                            <span>Notifications</span>
+                        </div>
+                        <div class="drop-scroll">
+                            <ul class="notification-list">
+                                {% for notification in notifications %}
+                                <li class="notification-message">
+                                    <a href="{% url 'notification_detail' notification_id=notification.id %}">
+                                        <div class="media">
+                                            <div class="media-body">
+                                                {% if not notification.is_read %}
+                                                    <p class="noti-details" style="font-weight: bold">{{ notification.message }}</p>
+                                                {% else %}
+                                                    <p class="noti-details">{{ notification.message }}</p>
+                                                {% endif %}
+                                                <p class="noti-time">{{ notification.timestamp }}</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                {% endfor %}
+                            </ul>                          
+                        </div>
+                        
+                        
+						{% comment %} <div class="topnav-dropdown-footer">
+							<a href="{% url 'notificationpage' %}">View all Notifications</a>
+						</div> {% endcomment %}
+                </li>
                 <li class="nav-item dropdown has-arrow">
                     <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown" style="color:maroon">
                         
 						<span style="color:maroon;">Admin</span>
                     </a>
-					<div class="dropdown-menu">
+					{% comment %} <div class="dropdown-menu">
 						<a class="dropdown-item" href="{% url 'profile' %}" style="color:maroon;">My Profile</a>
 						<a class="dropdown-item" href="{% url 'editprofile' %}" style="color:maroon;">Edit Profile</a>
 						
 						<a class="dropdown-item" href="{% url 'loggout' %}" style="color:maroon;">Logout</a>
-					</div>
+					</div> {% endcomment %}
                 </li>
                 
             </ul> 
             <div class="dropdown mobile-user-menu float-right">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-                <div class="dropdown-menu dropdown-menu-right">
+                {% comment %} <div class="dropdown-menu dropdown-menu-right">
                     <a class="dropdown-item" href="{% url 'profile' %}" style="color:maroon;">My Profile</a>
                     <a class="dropdown-item" href="{% url 'editprofile' %}" style="color:maroon;">Edit Profile</a>
                   
                     <a class="dropdown-item" href="{% url 'loggout' %}" style="color:maroon;">Logout</a>
-                </div>
+                </div> {% endcomment %}
             </div>
         </div>
         <div class="sidebar" id="sidebar">
@@ -56,7 +169,7 @@
                 <div id="sidebar-menu" class="sidebar-menu">
                     <ul>
                         <li class="menu-title">Main</li>
-                        <li class="active">
+                        <li>
                             <a href="{% url 'adminindex' %}"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                         </li>
 						<li>
@@ -107,7 +220,7 @@
             <div class="content">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h4 class="page-title">Activities</h4>
+                        <h4 class="page-title">Notifications</h4>
                     </div>
                 </div>
                 <div class="row">
@@ -115,18 +228,18 @@
                         <div class="activity">
                             <div class="activity-box">
                                 <ul class="activity-list">
-                                   
-                                    
-                                    
-                                    
-                                    
+                                    {% for notification in notifications %}
+                                    <li>
+                                        <p>{{ notification.message }}</p>
+                                        <p>{{ notification.timestamp }}</p>
+                                    </li>
+                                    {% endfor %}
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            
         </div>
     </div>
     <div class="sidebar-overlay" data-reff=""></div>
