--- a/templates/baselab.html
+++ b/templates/baselab.html
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                 {% else %}
-                    <a href="#" class="nav-item nav-link">Login</a>
+                    <a href="{% url 'loginn' %}" class="nav-item nav-link">Login</a>
                 {% endif %}
             </div>
         </div>
