--- a/templates/labstaff/viewbookings.html
+++ b/templates/labstaff/viewbookings.html
@@ -118,7 +118,6 @@
 					<div class="dropdown-menu">
 						<a class="dropdown-item" href="{% url 'profile1' %}" style="color:maroon;">My Profile</a>
 						<a class="dropdown-item" href="{% url 'editprofile' %}" style="color:maroon;">Edit Profile</a>
-						
 						<a class="dropdown-item" href="{% url 'loggout' %}" style="color:maroon;">Logout</a>
 					</div>
                 </li>
@@ -129,7 +128,6 @@
                 <div class="dropdown-menu dropdown-menu-right">
                     <a class="dropdown-item" href="{% url 'profile1' %}" style="color:maroon;">My Profile</a>
                     <a class="dropdown-item" href="{% url 'editprofile' %}" style="color:maroon;">Edit Profile</a>
-                  
                     <a class="dropdown-item" href="{% url 'loggout' %}" style="color:maroon;">Logout</a>
                 </div>
             </div>
@@ -157,7 +155,7 @@
                             <table class="table table-striped custom-table">
                                 <thead>
                                     <tr>
-                                        {% comment %} <th>Booking ID</th> {% endcomment %}
+                                        
                                         <th>Patient Name</th>
                                         <th>Email</th>
                                         <th>Phone</th>
@@ -172,7 +170,7 @@
                                 <tbody>
                                     {% for appointment in appointments|dictsortreversed:"booked_date" %}
                                         <tr>
-                                            {% comment %} <td>{{ appointment.id }}</td> {% endcomment %}
+                                            
                                             <td>{{ appointment.patient.full_name }}</td>
                                             <td>{{ appointment.patient.email }}</td>
                                             <td>{{ appointment.patient.phone }}</td>
@@ -182,12 +180,16 @@
                                             <td>{{ appointment.patient.selected_test.test_name }}</td>
                                             <td>{{ appointment.booked_date }}</td>
 											<td>
-												<!-- Button for submitting lab results -->
+												
 												<form id="lab_results_form_{{ appointment.id }}" action="{% url 'submit_lab_results' %}" method="post">
 													{% csrf_token %}
 													<input type="hidden" name="appointment_id" value="{{ appointment.id }}">
+													<input type="hidden" name="booking_id" value="{{ appointment.id }}">
 													<input type="hidden" name="test_name" value="{{ appointment.patient.selected_test.test_name }}">
-													<button type="submit" class="btn btn-primary">Submit Lab Results</button>
+													{% comment %} <button type="submit" class="btn btn-primary">Submit Lab Results</button> {% endcomment %}
+													<button type="submit" class="btn btn-primary" {% if lab_results_saved %}disabled{% endif %}>
+														Submit Lab Results
+													</button>
 												</form>
 											</td>
                                         </tr>
@@ -200,19 +202,7 @@
             </div>
             
             
-			<div id="delete_appointment" class="modal fade delete-modal" role="dialog">
-				<div class="modal-dialog modal-dialog-centered">
-					<div class="modal-content">
-						<div class="modal-body text-center">
-							<img src="{% static 'mainuser/img/user.jpg' %}" alt="" width="50" height="46">
-							<h3>Are you sure want to delete this Appointment?</h3>
-							<div class="m-t-20"> <a href="#" class="btn btn-white" data-dismiss="modal">Close</a>
-								<button type="submit" class="btn btn-danger">Delete</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			
 		</div>
     </div>
     <div class="sidebar-overlay" data-reff=""></div>
